Refactor AStar